# autonomie_split_pdf

./: README.rst  change_code_analytique  config.yaml  payrollpdf2ancode.sh  requirements.txt  script_pdf2text.sh  setup.cfg  setup.py  tweak.py
autosplit/: __init__.py  config.py  errors.py  file_operations.py  log_config.py  section.py  tweaker.py  tweaker_base.py
