[metadata]
name = autosplit
version = 1.0.0
summary = Splits specific PDF files and stores the result in a custom directory layout
download_url = UNKNOWN
home_page = http://nopageyet
author = Feth Arezki
author_email = tech@majerti.fr
classifier = Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Environment :: MacOS X :: Aqua
    Framework :: Setuptools Plugin

[files]
packages = autosplit
scripts =
    tweak
    script_pdf2text.sh
    requirements.txt
    setup.cfg
